:bug: Add overflow fix only when menu is open
#2195

--- a/frontend/scss/components/templates/_default.scss
+++ b/frontend/scss/components/templates/_default.scss
@@ -3,11 +3,6 @@
   padding-bottom: 3rem;
 }
 
-.#{utility('main')} {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 @mixin container {
   position: relative;
   display: flex;
